modified sections backgrounds

--- a/src/index.html
+++ b/src/index.html
@@ -140,8 +140,8 @@
       </section>
 
       <!-- Features Section -->
-      <section class="py-5to15 mb-[12vh]">
-        <div class="sec-container boxes">
+      <section class="py-3to5 mb-[12vh]">
+        <div class="sec-container max-w-[87.5rem] boxes">
           <div class="box relative overflow-hidden group">
             <span
               class="absolute left-0 top-0 w-0 h-full bg-[#fa5f6b] -z-[1] transition-all duration-500 group-hover:w-full"
@@ -316,7 +316,7 @@
       </section>
 
       <!-- Website Projects-->
-      <section class="pt-8to24 px-3to5" id="projects">
+      <section class="py-8to24 px-3to5 bg-[#f6f6f6]" id="projects">
         <!-- Projects header -->
         <h2 class="sec-title mb-5to15 w-fit text-center">
           Our Website Projects
@@ -860,7 +860,10 @@
       </section>
 
       <!-- WebApps Projects-->
-      <section class="py-12to36 px-3to5">
+      <section
+        class="pb-12to36 px-3to5 bg-[#f6f6f6]"
+        style="clip-path: polygon(0 0, 100% 0, 100% 85%, 0 95%)"
+      >
         <!-- Projects header -->
         <h2 class="sec-title mb-5to15 w-fit text-center">
           Our WebApps Projects
@@ -1419,7 +1422,10 @@
       </section>
 
       <!-- ------------- -->
-      <section class="pb-12to36"></section>
+      <div
+        class="pb-12to36 bg-[#f6f6f6]"
+        style="clip-path: polygon(0 0, 100% 0, 100% 35%, 0 85%)"
+      ></div>
 
       <!-- Our-advantages Section -->
       <section class="py-12to36 bg-[#fa5f6b]">
@@ -1514,23 +1520,20 @@
         </div>
       </section>
 
-      <!-- ------------- -->
-      <section class="pb-12to36"></section>
-
       <!-- Our-passion Section -->
-      <section class="py-12to36 bg-[#fa5f6b]" id="our-passion">
+      <section class="py-12to36" id="our-passion">
         <!-- Our-passion Header -->
         <div class="sec-container max-w-[90rem]">
-          <h2 class="sec-title text-white mb-8to20">
+          <h2 class="sec-title mb-8to20">
             Our Passion
-            <span class="left-dot !bg-white"></span>
-            <span class="right-dot !bg-white"></span>
+            <span class="left-dot"></span>
+            <span class="right-dot"></span>
           </h2>
 
           <!-- Our-passion boxes -->
           <div class="sm-boxes">
             <div
-              class="box w-72 px-4 py-6 bg-[#c84c56] text-slate-50 shadow-none border-b-8 border-white"
+              class="box w-72 px-4 py-6 border-4 border-[#fa5f6b] text-slate-700 shadow-none rounded-3xl"
             >
               <span class="block text-4xl mb-6">
                 <i class="fa-mug-hot fas"></i>
@@ -1550,7 +1553,7 @@
             </div>
 
             <div
-              class="box w-72 px-4 py-6 bg-[#c84c56] text-slate-50 shadow-none border-b-8 border-white"
+              class="box w-72 px-4 py-6 border-4 border-[#fa5f6b] text-slate-700 shadow-none rounded-3xl"
             >
               <span class="block text-4xl mb-6">
                 <i class="fa-folder far"></i>
@@ -1569,7 +1572,7 @@
             </div>
 
             <div
-              class="box w-72 px-4 py-6 bg-[#c84c56] text-slate-50 shadow-none border-b-8 border-white"
+              class="box w-72 px-4 py-6 border-4 border-[#fa5f6b] text-slate-700 shadow-none rounded-3xl"
             >
               <span class="block text-4xl mb-6">
                 <i class="fa-envelope far"></i>
@@ -1588,7 +1591,7 @@
             </div>
 
             <div
-              class="box w-72 px-4 py-6 bg-[#c84c56] text-slate-50 shadow-none border-b-8 border-white"
+              class="box w-72 px-4 py-6 border-4 border-[#fa5f6b] text-slate-700 shadow-none rounded-3xl"
             >
               <span class="block text-4xl mb-6">
                 <i class="fa-trophy fas"></i>
@@ -1608,9 +1611,6 @@
           </div>
         </div>
       </section>
-
-      <!-- ------------- -->
-      <section class="py-12to36"></section>
 
       <!-- Get-connected Section -->
       <section
