modified main layout backgrounds

--- a/src/index.html
+++ b/src/index.html
@@ -860,10 +860,7 @@
       </section>
 
       <!-- WebApps Projects-->
-      <section
-        class="pb-12to36 px-3to5 bg-[#f6f6f6]"
-        style="clip-path: polygon(0 0, 100% 0, 100% 85%, 0 95%)"
-      >
+      <section class="pb-8to24 px-3to5 bg-[#f6f6f6]">
         <!-- Projects header -->
         <h2 class="sec-title mb-5to15 w-fit text-center">
           Our WebApps Projects
@@ -1406,6 +1403,137 @@
         </div>
       </section>
 
+      <!-- Clients Section-->
+      <section class="lg:px-3to5 bg-[#f6f6f6]">
+        <!-- Clients header -->
+        <h2 class="sec-title mb-5to15 w-fit text-center">
+          Our Amazing Clients
+          <span class="left-dot hidden sm:block"></span>
+          <span class="right-dot hidden sm:block"></span>
+        </h2>
+
+        <!-- Swiper -->
+        <div class="swiper" id="clients-swiper">
+          <!-- Swiper Slides -->
+          <div class="swiper-wrapper">
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+
+            <div class="swiper-slide group/slide">
+              <img
+                src="./img/client-1.webp"
+                alt="..."
+                loading="lazy"
+                class="w-full max-w-[70%] h-auto max-h-20 xl:max-h-40 object-fill mx-auto select-none"
+              />
+              <div class="swiper-lazy-preloader"></div>
+            </div>
+          </div>
+
+          <!-- Swiper Buttons -->
+          <div
+            class="swiper-button-next after:font-awsome after:font-black after:content-['\f101'] after:text-xl lg:after:text-2xl xl:after:text-3xl after:text-black hover:opacity-70"
+          ></div>
+
+          <div
+            class="swiper-button-prev after:font-awsome after:font-black after:content-['\f100'] after:text-xl lg:after:text-2xl xl:after:text-3xl after:text-black hover:opacity-70"
+          ></div>
+        </div>
+      </section>
+
+      <!-- ------------- -->
+      <div
+        class="pb-12to36 bg-[#f6f6f6]"
+        style="clip-path: polygon(0 0, 100% 0, 100% 45%, 0 85%)"
+      ></div>
+
       <!-- Get-in-touch Section -->
       <section
         class="bg-cover bg-center bg-no-repeat bg-fixed py-12to36 min-h-[20rem] grid place-content-center selection:bg-slate-400"
@@ -1424,7 +1552,7 @@
       <!-- ------------- -->
       <div
         class="pb-12to36 bg-[#f6f6f6]"
-        style="clip-path: polygon(0 0, 100% 0, 100% 35%, 0 85%)"
+        style="clip-path: polygon(0 0, 100% 0, 100% 45%, 0 85%)"
       ></div>
 
       <!-- Our-advantages Section -->
@@ -1720,9 +1848,6 @@
       </section>
     </main>
 
-    <footer
-      class="py-12to36 bg-cover bg-top bg-no-repeat"
-      style="background-image: url(./img/footer.svg)"
-    ></footer>
+    <footer class="py-12to36 bg-slate-900"></footer>
   </body>
 </html>
