--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,28 @@
   <body
     class="bg-white font-sans font-normal text-14to16 text-slate-500 selection:bg-[#fe809e] selection:text-white"
   >
+    <header
+      class="absolute left-0 top-0 w-full z-10 px-3to9 py-4 flex justify-between items-center"
+    >
+      <!-- Logo -->
+      <a href="#" class="rounded-full pointer-events-auto">
+        <img
+          src="./img/logo.png"
+          alt="Logo"
+          class="w-28 xl:w-36 backdrop-blur-sm"
+        />
+      </a>
+
+      <!-- Menu -->
+      <button
+        class="w-14 h-14 xl:w-[4.5rem] xl:h-[4.5rem] bg-[#3333] rounded-full grid place-content-center gap-[5px] xl:gap-[7px]"
+      >
+        <span class="block w-6 xl:w-[1.8rem] h-[2px] bg-white">&nbsp; </span>
+        <span class="block w-6 xl:w-[1.8rem] h-[2px] bg-white">&nbsp; </span>
+        <span class="block w-6 xl:w-[1.8rem] h-[2px] bg-white">&nbsp; </span>
+      </button>
+    </header>
+
     <main>
       <!-- Hero Section -->
       <section
