--- a/src/index.html
+++ b/src/index.html
@@ -75,11 +75,11 @@
         <nav
           class="menu-nav fixed right-0 top-0 w-full h-screen px-3to5 grid justify-items-center content-center gap-6 lg:gap-10 transition-all duration-700 opacity-0 invisible"
         >
-          <a href="#" class="menu-link">About Natous</a>
-          <a href="#" class="menu-link">Your benfits</a>
-          <a href="#" class="menu-link">Popular tours</a>
-          <a href="#" class="menu-link">Stories</a>
-          <a href="#" class="menu-link">Book now</a>
+          <a href="#home" class="menu-link">Home</a>
+          <a href="#scope" class="menu-link">Scope Of Work</a>
+          <a href="#projects" class="menu-link">Projects</a>
+          <a href="#advantages" class="menu-link">Advantages</a>
+          <a href="#contacts" class="menu-link">Contacts</a>
         </nav>
 
         <!-- Menu Button -->
@@ -274,7 +274,7 @@
       </section>
 
       <!-- Scope-of-work Section-->
-      <section class="py-12to36">
+      <section class="py-12to36" id="scope">
         <div class="sec-container">
           <!-- Scope-of-work header -->
           <h2 class="sec-title">
@@ -1607,7 +1607,7 @@
       ></div>
 
       <!-- Our-advantages Section -->
-      <section class="py-12to36 bg-[#fa5f6b]">
+      <section class="py-12to36 bg-[#fa5f6b]" id="advantages">
         <!-- Our-advantages Header -->
         <div class="sec-container">
           <h2 class="sec-title text-white mb-8to20">
@@ -1795,7 +1795,7 @@
       <section
         class="bg-cover bg-center bg-no-repeat bg-fixed py-12to36 md:py-8to24 selection:bg-slate-400"
         style="background-image: url(./img/contact.webp)"
-        id="contact"
+        id="contacts"
       >
         <div class="sec-container pb-5">
           <!-- Get-connected Header -->
