--- a/src/index.html
+++ b/src/index.html
@@ -108,8 +108,8 @@
     <main>
       <!-- Hero Section -->
       <section
-        id="home"
         class="min-h-[90vh] mb-[10vh] bg-gradient-to-tr from-[#fe802d] from-10% via-[#fe0840] via-50% to-[#ac0bd9] to-90% flex items-center relative"
+        id="home"
       >
         <!-- Hero Particles -->
         <div
@@ -119,7 +119,7 @@
 
         <!-- Hero Lines -->
         <div
-          class="absolute left-0 top-0 w-full h-full pointer-events-none bg-cover bg-no-repeat bg-fixed opacity-70"
+          class="hidden xl:block absolute left-0 top-0 w-full h-full pointer-events-none bg-cover bg-no-repeat bg-fixed opacity-70"
           style="background-image: url(./img/lines.svg)"
         ></div>
 
@@ -161,7 +161,7 @@
           </h1>
 
           <p
-            class="max-w-3xl ml-2 text-16to18 text-white leading-6 md:leading-8"
+            class="max-w-3xl ml-2 text-16to18 text-white leading-6 md:leading-8 mb-8"
           >
             We create custom websites that align with your brand, ensuring a
             stress-free experience with our transparent processes and clear
@@ -170,7 +170,7 @@
 
           <!-- Hero Buttons -->
           <div
-            class="mt-8 flex flex-col-reverse gap-8 items-center md:flex-row md:gap-12"
+            class="flex justify-center md:justify-start md:items-center md:gap-x-12"
           >
             <a
               href="#contacts"
@@ -180,7 +180,7 @@
             </a>
             <a
               href="#projects"
-              class="btn--text text-white z-0 group flex items-center gap-[6px] md:gap-0"
+              class="hidden md:flex group btn--text text-white z-0 items-center gap-[6px] md:gap-0"
             >
               <span>View Our Work</span>
               <span
@@ -263,7 +263,7 @@
 
       <!-- Passion Section -->
       <section
-        class="bg-cover bg-center bg-no-repeat bg-fixed py-8to24 selection:bg-slate-400"
+        class="bg-cover bg-center bg-no-repeat bg-fixed py-12to24 selection:bg-slate-400"
         style="background-image: url(./img/passion.webp)"
       >
         <div class="sec-container">
@@ -370,7 +370,7 @@
       </section>
 
       <!-- Website Projects-->
-      <section class="py-8to24 px-3to5 bg-[#f6f6f6]" id="projects">
+      <section class="py-12to24 px-3to5 bg-[#f6f6f6]" id="projects">
         <!-- Projects header -->
         <h2 class="sec-title mb-5to15 w-fit text-center">
           Our Website Projects
@@ -914,7 +914,7 @@
       </section>
 
       <!-- WebApps Projects-->
-      <section class="pb-8to24 px-3to5 bg-[#f6f6f6]">
+      <section class="pb-12to24 px-3to5 bg-[#f6f6f6]">
         <!-- Projects header -->
         <h2 class="sec-title mb-5to15 w-fit text-center">
           Our WebApps Projects
@@ -1590,7 +1590,7 @@
 
       <!-- Get-in-touch Section -->
       <section
-        class="bg-cover bg-center bg-no-repeat bg-fixed py-12to36 min-h-[20rem] grid place-content-center selection:bg-slate-400"
+        class="bg-cover bg-center bg-no-repeat bg-fixed py-5to15 min-h-[20rem] grid place-content-center selection:bg-slate-400"
         style="background-image: url(./img/passion.webp)"
       >
         <div class="sec-container">
@@ -1613,7 +1613,7 @@
       <section class="py-12to36 bg-[#fa5f6b]" id="advantages">
         <!-- Our-advantages Header -->
         <div class="sec-container">
-          <h2 class="sec-title text-white mb-8to20">
+          <h2 class="sec-title text-white mb-12to20">
             Our Advantages
             <span class="left-dot !bg-white"></span>
             <span class="right-dot !bg-white"></span>
@@ -1706,7 +1706,7 @@
       <section class="py-12to36" id="our-passion">
         <!-- Our-passion Header -->
         <div class="sec-container max-w-[90rem]">
-          <h2 class="sec-title mb-8to20">
+          <h2 class="sec-title mb-12to20">
             Our Passion
             <span class="left-dot"></span>
             <span class="right-dot"></span>
@@ -1796,13 +1796,13 @@
 
       <!-- Get-connected Section -->
       <section
-        class="bg-cover bg-center bg-no-repeat bg-fixed py-12to36 md:py-8to24 selection:bg-slate-400"
+        class="bg-cover bg-center bg-no-repeat bg-fixed py-12to24 selection:bg-slate-400"
         style="background-image: url(./img/contact.webp)"
         id="contacts"
       >
         <div class="sec-container pb-5">
           <!-- Get-connected Header -->
-          <h2 class="sec-title font-heavy text-white mb-8to20">
+          <h2 class="sec-title font-heavy text-white mb-12to20">
             Get Connected
             <span class="left-dot !bg-white"></span>
             <span class="right-dot !bg-white"></span>
